# pantri

./: .gitignore  api.py  calculate.py  foods.json  main.py  pyproject.toml  schema.sql  wrangler.jsonc
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
deploy/: Caddyfile  pantri.service  setup.sh
deploy/terraform/: cloud-init.yaml  main.tf  terraform.tfvars.example  variables.tf
mealpreps/: 2026-03-14.txt
src/pantri/: api.py  calculate.py  cli.py
static/: index.html
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260313040213_create_storage_bucket.sql  20260313044931_create_mealpreps_table.sql  20260314000000_create_weight_table.sql  20260315000000_days_anon_write.sql
website/: .gitignore  README.md  package-lock.json  package.json  wrangler.jsonc
website/src/: app.css  app.html
website/src/lib/: auth.svelte.ts  format.ts  supabase.ts  types.ts
website/src/lib/components/: BarChart.svelte  EntryCard.svelte  LineChart.svelte  MacroCard.svelte  Ring.svelte
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/history/: +page.svelte
website/src/routes/history/[date]/: +page.svelte
website/src/routes/login/: +page.svelte
website/src/routes/pantry/: +page.svelte
website/src/routes/stats/: +page.svelte
website/src/routes/weight/: +page.svelte
(+19 files in other folders)
