[project]
name = "pantri"
version = "0.1.0"
description = "LLM-powered food and calorie tracker"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.0",
    "openai>=1.0.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
pantri = "pantri.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pantri"]
